fix scrollbar style on windows

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -24,6 +24,8 @@ $color-background-light-blue-100: rgba(239,245,248,1);
 $color-background-light-blue-200: rgba(231,239,244,1);
 $color-background-light-blue-300: rgba(151, 200, 247, 0.480);
 
+$color-scrollbar-background: rgb(123, 123, 123,1);
+
 $color-focus-outline: rgba(151, 200, 247, 0.680);
 
 $color-brand-blue-600: rgba(20,117,220,1);
