--- a/src/scss/components/_options.scss
+++ b/src/scss/components/_options.scss
@@ -7,7 +7,7 @@
     padding-left: var(--container-padding);
     padding-right: var(--container-padding);
     padding-top: 8px;
-    width: 100vw;
+    // width: 100vw;
     overflow-x: scroll;
 
     &--sticky {
