--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -2,17 +2,17 @@
 
 #table-header {
   &::-webkit-scrollbar {
-    width: rem(8);
+    width: rem(6);
+    height: rem(6);
   }
 
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px #c3c3c3;
-    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px $color-background-white;
   }
 
   &::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px black;
+    -webkit-box-shadow: inset 0 0 6px $color-scrollbar-background;
   }
 }
 
